--- a/HelloPipes/HelloPipes.csproj
+++ b/HelloPipes/HelloPipes.csproj
@@ -3,12 +3,12 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProjectGuid>{7A64CC47-4209-4566-BB88-7D931B7F5216}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>HalloQBus</RootNamespace>
-    <AssemblyName>HalloQBus</AssemblyName>
     <ProductVersion>12.0.0</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
+    <ProjectGuid>{DA0124AC-6F7E-478B-8197-3A5D49E31BA1}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>HelloPipes</RootNamespace>
+    <AssemblyName>HelloPipes</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -18,8 +18,8 @@
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x86</PlatformTarget>
     <Externalconsole>true</Externalconsole>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <DebugType>full</DebugType>
@@ -27,21 +27,16 @@
     <OutputPath>bin\Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x86</PlatformTarget>
     <Externalconsole>true</Externalconsole>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="Mono.Posix" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <ItemGroup>
-    <ProjectReference Include="..\Qbus.Communication_v6.0.1\Qbus.Communication_v6.0.1.csproj">
-      <Project>{1000CFC5-4B8E-4CF4-8228-E163BF664756}</Project>
-      <Name>Qbus.Communication_v6.0.1</Name>
-    </ProjectReference>
-  </ItemGroup>
 </Project>
