--- a/Qbus.Communication_v6.0.1/Qbus.Communication_v6.0.1.csproj
+++ b/Qbus.Communication_v6.0.1/Qbus.Communication_v6.0.1.csproj
@@ -12,6 +12,8 @@
     <ApplicationVersion>1.0.0.0</ApplicationVersion>
     <FileAlignment>512</FileAlignment>
     <RootNamespace>Qbus.Communication</RootNamespace>
+    <ProductVersion>12.0.0</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
